CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.5        |
+-----------------------+
BUGFIXES
10-08-05    Fixed bug where editing articles 'remembered' the GUI category, not
            the article category
10-08-05    Fixed verticalSimple.css to work with new CSS
08-08-05    Removed quoting of chartset=utf-8 (Ernest Beinrohr)
01-08-05    Added php5 workaround in SGL_Wizard because strict call by reference
            behaviour (Tobias Kuckuck)
01-08-05    SGL_Item::getDynamicFields now returns a string of html representing
            the fields, or alternatively an array of just the data. (Fabio Bacigalupo)
01-08-05    Removed obselete stylesheets
26-07-05    Fixed notices related to PHP 4.4.0
24-07-05    Missing form name added, without which it was impossible to create new articles
21-07-05    Fixed inability to edit org types
20-07-05    Implemented boundary checks for section edit
20-07-05    Removed shop-related sections from mysql data
17-07-05    Fixed sections listed in blocks mgr, 'none' now correctly reads
            'all sections'

IMPROVEMENTS
17-08-05    Added additional arg to SGL_Item::retrievePaginated() for specifying
            sort column
17-08-05    SGL_String lib updated and improved (Philippe Lhoste)
17-08-05    Updated to latest iso-3166 county list (Philippe Lhoste)
17-08-05    Upgraded to version 2.0 of FCKeditor (Werner Krauss)
17-08-05    Added theme switcher block
17-08-05    Factored module config loading and merging out of SGL_Controller::_getModel
17-08-05    Added almost 200 tests for front controller URL parsing and improved
            reliability
16-08-05    Added ability to customise default theme's stylesheets non-invasively